<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ITS for Kannada</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="title_activity_display_meanings">Display Meanings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_eng_or_kan_user">Choose</string>
    <string name="EngKanUserStr1">Choose Maadi!</string>
    <string name="KanUserChoice">I am a Kannada speaker</string>
    <string name="EngUserChoice">I am not a Kannada speaker</string>
    <string name="title_activity_sign_up">Signup</string>
    <string name="SignUp">REGISTER</string>
    <string name="homeURL">http://nammaapp.in</string>
    <string name="appPrefFile">appPref</string>
    <string name="title_activity_choose_start">ChooseStartActivity</string>
    <string name="displaymeanings">Display Meanings</string>
    <string name="title_activity_english_home">Home</string>
    <string name="title_activity_kannada_home">Home</string>
    <string name="contextDictBtnTxt">Search Context Based Dictionary</string>
    <string name="phraseDictbtnTxt">Search Phrase Dictionary</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_dictionary_search">Dictionary Search</string>
    <string name="title_activity_phrase_search">Phrase Search</string>

    <string-array name="region_arrays">
        <item>Mysore</item>
        <item>Hyderabad-Karnataka</item>
        <item>Hubli-Dharwad-Gadag-Haveri</item>
        <item>Belgaum</item>
        <item>Karwar-North Canara</item>
        <item>Mangalore-Udupi-South Canara</item>
        <item>Kodagu</item>
        <item>Kolar-Pavgada</item>
        <item>Bangalore</item>
        <item>Bellary</item>
        <item>Davangere-Chitradurga</item>
        <item>Bijapur-Bagalkot</item>
        <item>Hassan-Chikmagaluru</item>
        <item>Shivamogga</item>
        <item>Mandya-Kanakapura-Magadi-Kunigal-Chamaraajanagar</item>
        <item>Other</item>
    </string-array>
    <string-array name="points_type">
        <item>XP Points</item>
        <item>Question Up Points</item>
        <item>Answer Up Points</item>
    </string-array>

    <string name="title_activity_request_phrase_translate">Request Phrase Translate</string>
    <string name="title_activity_search_forum">Search the Forum</string>
    <string name="title_activity_learning_module">Learning Module</string>
    <string name="title_activity_dict_search">Dictionary Search</string>
    <string name="title_activity_question">Ask a Question</string>
    <string name="title_activity_forum">Forum</string>
    <string name="title_activity_phrase_request">Phrase Request...</string>
    <string name="title_activity_word_context_res">Word + Context Resolution</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_points">Points and Badges</string>
    <string name="title_activity_pronunciation">Pronunciation</string>
    <string name="title_activity_eval">Evaluator</string>
    <string name="title_activity_my_home">My Home</string>
    <string name="title_activity_question_display">Question Display</string>
    <string name="title_activity_add_answer">Add Answer</string>
    <string name="title_activity_my_questions">My Questions</string>
    <string name="title_activity_my_answers">Questions I Answered</string>
    <string name="title_activity_my_question_display">My Questions</string>

    <color name="black">#000000</color>
    <color name="green">#00FF00</color>
    <color name="white">#FFFFFF</color>
    <color name="grey">#D6D2D4</color>

    <string name="title_activity_learn">Learn</string>
    <string name="title_activity_kan_words_test">Kannada Word Test</string>
    <string name="title_activity_learn_phrase">Learn Phrases</string>
    <string name="title_activity_sync">Sync</string>
    <string name="title_activity_context_search_home">Context Based Search</string>
    <string name="title_activity_context_display_meaning">Context Based Meaning</string>
    <string name="title_activity_regional_points_list">Regional Leaderboard</string>
    <string name="title_activity_xppoints">XP Points</string>
    <string name="title_activity_qup_points">QUp Points</string>
    <string name="title_activity_aup_points">AUpPoints</string>
    <string name="title_activity_my_points_display">My Points</string>
    <string name="title_activity_practice_test">Practice Test</string>
    <string name="title_activity_test_options">Test Options</string>
    <string name="title_activity_practice_test_options">Practice Test Options</string>
    <string name="title_activity_my_phrase_requests">My Phrase Requests</string>
    <string name="title_activity_provide_translate">Provide Translate</string>
    <string name="title_activity_request_context_resolution">Request Context Resolution</string>
    <string name="title_activity_my_context_resolution">My Context Resolution</string>
    <string name="title_activity_kan_phrase_home">Kannada Phrase Home</string>
    <string name="title_activity_context_kan_home">Context Kan Home</string>
    <string name="title_activity_resolve_system_context_requests">Resolve System Context Requests</string>
    <string name="title_activity_resolve_context_form">Resolve Context Form</string>
    <string name="title_activity_resolve_user_context_requests">Resolve User Context Requests</string>

</resources>