<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#000000"
    tools:context=".EngOrKanUser" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/EngKanUserStr1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnKanUserChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/KanUserChoice" 
          android:background="#777777" />

    <Button
        android:id="@+id/btnEngUserChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnKanUserChoice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/EngUserChoice" 
         android:background="#777777"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
         android:textColor="#FFFFFF"
        android:text="Welcome to ITS for Kannada!"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>