<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#D6D2D4"
    tools:context=".SignUpActivity" >

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:text="@string/SignUp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnDict"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="282dp"
        android:text="@string/contextDictBtnTxt"
         android:background="#777777"
        android:textColor="#FFFFFF"
         android:drawableRight="@drawable/search"
       
        android:textAppearance="?android:attr/textAppearanceSmall" />

     <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSignUp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:gravity="center"
        
        android:text="Please Register to use all the features of Namma App"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#333333" />

    <Button
        android:id="@+id/btnPhrase"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnDict"
        android:layout_alignRight="@+id/btnDict"
        android:layout_below="@+id/btnDict"
        android:layout_marginTop="15dp"
        android:background="#777777"
        android:drawableRight="@drawable/search"
        android:text="@string/phraseDictbtnTxt"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF" />
</RelativeLayout>